--- a/public/views/index.html
+++ b/public/views/index.html
@@ -10,6 +10,134 @@
   </head>
   <body>
     <h1>Fruit Stand</h1>
+    <h2>Account Balance: $100</h2>
+    <section class="container">
+      <!-- Start Row -->
+      <div class="row">
+        <div class="col-md-3 ">
+          <div class="itemSection">
+            <h3>Item 1</h3>
+          </div>
+          <div class="buttonHolder">
+            <button type="button" name="button" class="sell">Sell</button>
+            <button type="button" name="button" class="buy">Buy</button>
 
+          </div>
+        </div>
+        <div class="col-md-3 ">
+          <div class="itemSection">
+            <h3>Item 2</h3>
+          </div>
+          <div class="buttonHolder">
+            <button type="button" name="button" class="sell">Sell</button>
+            <button type="button" name="button" class="buy">Buy</button>
+
+          </div>
+        </div>
+        <div class="col-md-3 ">
+          <div class="itemSection">
+            <h3>Item 3</h3>
+          </div>
+          <div class="buttonHolder">
+            <button type="button" name="button" class="sell">Sell</button>
+            <button type="button" name="button" class="buy">Buy</button>
+          </div>
+        </div>
+        <div class="col-md-3 ">
+          <div class="itemSection">
+            <h3>Item 4</h3>
+          </div>
+          <div class="buttonHolder">
+            <button type="button" name="button" class="sell">Sell</button>
+            <button type="button" name="button" class="buy">Buy</button>
+          </div>
+        </div>
+      </div>
+      <!--  End Row-->
+      <!-- Start Row -->
+      <div class="row">
+        <div class="col-md-3 ">
+          <div class="itemSection">
+            <h3>Item 5</h3>
+          </div>
+          <div class="buttonHolder">
+            <button type="button" name="button" class="sell">Sell</button>
+            <button type="button" name="button" class="buy">Buy</button>
+
+          </div>
+        </div>
+        <div class="col-md-3 ">
+          <div class="itemSection">
+            <h3>Item 6</h3>
+          </div>
+          <div class="buttonHolder">
+            <button type="button" name="button" class="sell">Sell</button>
+            <button type="button" name="button" class="buy">Buy</button>
+
+          </div>
+        </div>
+        <div class="col-md-3 ">
+          <div class="itemSection">
+            <h3>Item 7</h3>
+        </div>
+        <div class="buttonHolder">
+          <button type="button" name="button" class="sell">Sell</button>
+          <button type="button" name="button" class="buy">Buy</button>
+
+        </div>
+        </div>
+        <div class="col-md-3 ">
+          <div class="itemSection">
+            <h3>Item 8</h3>
+        </div>
+        <div class="buttonHolder">
+          <button type="button" name="button" class="sell">Sell</button>
+          <button type="button" name="button" class="buy">Buy</button>
+        </div>
+        </div>
+      </div>
+      <!-- End Row -->
+      <!-- Start Row -->
+      <div class="row">
+        <div class="col-md-3 ">
+          <div class="itemSection">
+            <h3>Item 9</h3>
+          </div>
+          <div class="buttonHolder">
+            <button type="button" name="button" class="sell">Sell</button>
+            <button type="button" name="button" class="buy">Buy</button>
+        </div>
+          </div>
+        <div class="col-md-3 ">
+          <div class="itemSection">
+            <h3>Item 10</h3>
+          </div>
+          <div class="buttonHolder">
+            <button type="button" name="button" class="sell">Sell</button>
+            <button type="button" name="button" class="buy">Buy</button>
+          </div>
+        </div>
+        <div class="col-md-3 ">
+          <div class="itemSection">
+            <h3>Item 11</h3>
+        </div>
+        <div class="buttonHolder">
+          <button type="button" name="button" class="sell">Sell</button>
+          <button type="button" name="button" class="buy">Buy</button>
+        </div>
+        </div>
+        <div class="col-md-3 ">
+          <div class="itemSection">
+          <h3>Item 12</h3>
+        </div>
+        <div class="buttonHolder">
+          <button type="button" name="button" class="sell">Sell</button>
+          <button type="button" name="button" class="buy">Buy</button>
+
+        </div>
+        </div>
+      </div>
+      <!-- End Row  -->
+    </section>
   </body>
 </html>
