--- a/public/views/index.html
+++ b/public/views/index.html
@@ -8,13 +8,13 @@
     <script src="vendors/angular.min.js" charset="utf-8"></script>
     <script src="scripts/marketController.js" charset="utf-8"></script>
   </head>
-  <body>
+  <body ng-app="myApp">
     <h1>Fruit Stand</h1>
     <h2>Account Balance: $100</h2>
     <section class="container">
       <!-- Start Row -->
       <div class="row">
-        <div class="col-md-3 ">
+        <div class="col-md-3 " ng-repeat="">
           <div class="itemSection">
             <h3>Item 1</h3>
           </div>
@@ -24,120 +24,11 @@
 
           </div>
         </div>
-        <div class="col-md-3 ">
-          <div class="itemSection">
-            <h3>Item 2</h3>
-          </div>
-          <div class="buttonHolder">
-            <button type="button" name="button" class="sell">Sell</button>
-            <button type="button" name="button" class="buy">Buy</button>
 
-          </div>
-        </div>
-        <div class="col-md-3 ">
-          <div class="itemSection">
-            <h3>Item 3</h3>
-          </div>
-          <div class="buttonHolder">
-            <button type="button" name="button" class="sell">Sell</button>
-            <button type="button" name="button" class="buy">Buy</button>
-          </div>
-        </div>
-        <div class="col-md-3 ">
-          <div class="itemSection">
-            <h3>Item 4</h3>
-          </div>
-          <div class="buttonHolder">
-            <button type="button" name="button" class="sell">Sell</button>
-            <button type="button" name="button" class="buy">Buy</button>
-          </div>
-        </div>
       </div>
       <!--  End Row-->
-      <!-- Start Row -->
-      <div class="row">
-        <div class="col-md-3 ">
-          <div class="itemSection">
-            <h3>Item 5</h3>
-          </div>
-          <div class="buttonHolder">
-            <button type="button" name="button" class="sell">Sell</button>
-            <button type="button" name="button" class="buy">Buy</button>
 
-          </div>
-        </div>
-        <div class="col-md-3 ">
-          <div class="itemSection">
-            <h3>Item 6</h3>
-          </div>
-          <div class="buttonHolder">
-            <button type="button" name="button" class="sell">Sell</button>
-            <button type="button" name="button" class="buy">Buy</button>
 
-          </div>
-        </div>
-        <div class="col-md-3 ">
-          <div class="itemSection">
-            <h3>Item 7</h3>
-        </div>
-        <div class="buttonHolder">
-          <button type="button" name="button" class="sell">Sell</button>
-          <button type="button" name="button" class="buy">Buy</button>
-
-        </div>
-        </div>
-        <div class="col-md-3 ">
-          <div class="itemSection">
-            <h3>Item 8</h3>
-        </div>
-        <div class="buttonHolder">
-          <button type="button" name="button" class="sell">Sell</button>
-          <button type="button" name="button" class="buy">Buy</button>
-        </div>
-        </div>
-      </div>
-      <!-- End Row -->
-      <!-- Start Row -->
-      <div class="row">
-        <div class="col-md-3 ">
-          <div class="itemSection">
-            <h3>Item 9</h3>
-          </div>
-          <div class="buttonHolder">
-            <button type="button" name="button" class="sell">Sell</button>
-            <button type="button" name="button" class="buy">Buy</button>
-        </div>
-          </div>
-        <div class="col-md-3 ">
-          <div class="itemSection">
-            <h3>Item 10</h3>
-          </div>
-          <div class="buttonHolder">
-            <button type="button" name="button" class="sell">Sell</button>
-            <button type="button" name="button" class="buy">Buy</button>
-          </div>
-        </div>
-        <div class="col-md-3 ">
-          <div class="itemSection">
-            <h3>Item 11</h3>
-        </div>
-        <div class="buttonHolder">
-          <button type="button" name="button" class="sell">Sell</button>
-          <button type="button" name="button" class="buy">Buy</button>
-        </div>
-        </div>
-        <div class="col-md-3 ">
-          <div class="itemSection">
-          <h3>Item 12</h3>
-        </div>
-        <div class="buttonHolder">
-          <button type="button" name="button" class="sell">Sell</button>
-          <button type="button" name="button" class="buy">Buy</button>
-
-        </div>
-        </div>
-      </div>
-      <!-- End Row  -->
     </section>
   </body>
 </html>
