--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Fruit Market Assignment</title>
-    <link rel="stylesheet" href="vendors/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="vendors/bootstrap.min.css"> -->
     <link rel="stylesheet" href="styles/styles.css">
     <script src="vendors/angular.min.js" charset="utf-8"></script>
     <script src="scripts/marketController.js" charset="utf-8"></script>
